--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "bootstrap": "^4.4.1",
+    "core-js": "^2.5.4",
+    "dhtmlx-gantt": "^6.3.7",
     "jquery": "^3.4.1",
     "net": "^1.0.2",
     "rxjs": "~6.4.0",
