--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.9",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
     "@angular/forms": "~8.2.9",
     "@angular/http": "^7.2.16",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@swimlane/ngx-charts": "^13.0.2",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
     "date-format-lite": "^17.7.0",
     "dhtmlx-gantt": "^6.3.7",
     "file-saver": "^2.0.2",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "net": "^1.0.2",
     "rxjs": "~6.4.0",
